testing/tests/ui/non-ident-invalid-block-content.stderr
error: unexpected character `{`
 --> <source attribute>:1:3
       "{} %}"
 --> tests/ui/non-ident-invalid-block-content.rs:7:21
  |
7 | #[template(source = r#"{% {} %}"#, ext = "txt")]
  |                     ^^^^^^^^^^^^^
